fix page content m site spacing

--- a/css/main.css
+++ b/css/main.css
@@ -1472,7 +1472,10 @@ table#wp-calendar tfoot {
     display: none; }
 
   .icon-item-top {
-    margin-top: 10px; } }
+    margin-top: 10px; }
+
+  .page-content {
+    margin: 20px 0; } }
 /** MEDIA MAX WIDTH 992px **/
 @media (max-width: 992px) {
   .page-top {
