--- a/scss/files/_media.scss
+++ b/scss/files/_media.scss
@@ -78,6 +78,9 @@
     margin-top: 10px;
   }
 
+  .page-content {
+    margin: 20px 0;
+  }
 }
 
 /** MEDIA MAX WIDTH 992px **/
